--- a/index.html
+++ b/index.html
@@ -3,24 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-commerce</title>
+    <title>E-commerce Landing Page</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <h1>Welcome....!</h1>
-        <nav class="navbar">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Contact </a>
-        </nav>
-        <article>
-            <h5>We have got everything you need...!</h5>
-            <img src="">
-
-        </article>
-
+        <div class="container">
+            <nav class="navbar bg-body-tertiary justify-content-end" >
+                <div class="container">
+                    <a class="navbar-brand" href="#">
+                        <img src="logo.png" alt="gym store logo" class="logo" width="30" height="24" >
+                        <div class="brand-name">MERN GYM</div>
+                    </a>
+                  </div>
+                <ul class="nav nav-tabs justify-content-end">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Account</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Category</a>
+                    </li>
+                    </li>
+                  </ul>
+                <!-- <h1>MERN GYM SHOP</h1>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul> -->
+            </nav>
+        </div>
     </header>
-    
+
+    <section class="hero">
+        <div class="container">
+            <h1>Welcome to Our MERN-GYM Store</h1>
+            <p>We have every gym equipment you need!</p>
+        </div>
+    </section>
+
+    <section class="featured-products">
+        <div class="container">
+            <h2>Featured Products</h2>
+            <div class="product-grid">
+                <div class="product">
+                    <img src="big-dumbbells-white.jpg" class="rounded float-start" alt="big-dumbbells-white logo">
+                    <h3>Dumbbell</h3>
+                    <p>₹500</p>
+                    <button type="button" class="btn btn-dark">Add to Cart</button>
+                    <button type="button" class="btn btn-dark">Buy now</button>
+                </div>
+                <div class="product">
+                    <img src="w.png" class="rounded float-start" alt="css logo">
+                    <h3>Bench</h3>
+                    <p>₹1200</p>
+                    <button type="button" class="btn btn-dark">Add to Cart</button>
+                    <button type="button" class="btn btn-dark">Buy now</button>
+                </div>
+                <div class="product">
+                    <img src="gym-abs-ab-machine-lXAa6d9-600.jpg" class="rounded float-start" alt="Product 3">
+                    <h3>Abs machine</h3>
+                    <p>₹1500</p>
+                    <button type="button" class="btn btn-dark">Add to Cart</button>
+                    <button type="button" class="btn btn-dark">Buy now</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <nav>
+                <ul>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
